frontend/deploy/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: quality-dashboard
    app.kubernetes.io/component: quality-frontend
    app.kubernetes.io/instance: quality-dashboard
    app.kubernetes.io/name: quality-dashboard
    component: quality-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quality-dashboard
      component: quality-frontend
  template:
    metadata:
      labels:
        app: quality-dashboard
        app.kubernetes.io/component: quality-frontend
        app.kubernetes.io/instance: quality-dashboard
        app.kubernetes.io/name: quality-dashboard
        component: quality-frontend
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 512Mi
          name: frontend
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          image: quay.io/redhat-appstudio/quality-dashboard-frontend:latest
