frontend/deploy/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quality-frontend-route
spec:
  to:
    kind: Service
    name: quality-frontend-service
  port:
    targetPort: 'https'
  tls:
      termination: reencrypt
